think I fixed the normalization issue between positions.  I wasn't resetting the weight object on position change so when two positions had statistics that overlapped the weights endured

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+.test-wrapper {
+  text-align: center;
+}
+
+.test-inside {
+  display: inline-block;
+}
+
 .test {
   font: 10px sans-serif;
   background-color: steelblue;
